--- a/index.html
+++ b/index.html
@@ -4,24 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <title>Password Generator</title>
 </head>
 
 <body>
 
+    <div class="text-center">
 
-    <h1 id="title_page">Hello World!</h1>
-
-
-
+        <h1 class="mb-5" id="title_page">Password Generator</h1>
 
 
 
 
-    <script type="text/javascript">
-        //qui va il codice Javascript
-        //ma è meglio inserirlo nel file .js
-    </script>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Nome</label>
+            <p class="border border-black rounded">&nbsp;<span id="name"></span></p>
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Cognome</label>
+            <p class="border border-black rounded">&nbsp;<span id="surname"></span></p>
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Colore Preferito</label>
+            <p class="border border-black rounded">&nbsp;<span id="favoriteColor"></span></p>
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Password Insicura</label>
+            <p class="border border-black rounded">&nbsp;<span id="password1"></span></p>
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Password Standard</label>
+            <p class="border border-black rounded">&nbsp;<span id="password2"></span></p>
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Password Sicura</label>
+            <p class="border border-black rounded">&nbsp;<span id="password3"></span></p>
+        </div>
+
+
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
     <script src="js/main.js"></script>
 
